[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/enemies/enemy_batata.png" type="Texture" id=1]
[ext_resource path="res://scripts/Tower.gd" type="Script" id=2]
[ext_resource path="res://scennes/HpBar.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 59.5, 60.25 )

[sub_resource type="CircleShape2D" id=3]
radius = 356.14

[node name="Tower" type="Area2D" groups=["ENEMY"]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.5, 18.75 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="HpBar" parent="." instance=ExtResource( 3 )]
position = Vector2( -2, -94 )
scale = Vector2( 2, 2 )
background_color = Color( 0.709804, 0.0862745, 0.321569, 1 )

[node name="BulletTimer" type="Timer" parent="."]
autostart = true

[node name="BulletPosition2D" type="Position2D" parent="."]
position = Vector2( -61, -68 )

[node name="SensorArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SensorArea2D"]
shape = SubResource( 3 )

[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
[connection signal="area_entered" from="SensorArea2D" to="." method="_on_SensorArea2D_area_entered"]
[connection signal="area_exited" from="SensorArea2D" to="." method="_on_SensorArea2D_area_exited"]
